--- a/ui.frontend/src/main/webpack/components/_category.scss
+++ b/ui.frontend/src/main/webpack/components/_category.scss
@@ -1,8 +1,12 @@
-.cmp-category__image {
+.cmp-category {
+	display: block;
 	
-		/* This class targets a Core Component Image CSS class */
-		.cmp-image__image {
-			width: 160px;
-			height: 140px;
-		}
+	.cmp-category__image {
+		width: 160px;
+		height: 140px;
+	}
+	
+	.cmp-category__name {
+		justify-self: center;
+	}
 }
