--- a/ui.frontend/src/main/webpack/components/_navigation.scss
+++ b/ui.frontend/src/main/webpack/components/_navigation.scss
@@ -1,9 +1,31 @@
-.cmp-navigation {}
-.cmp-navigation__group {}
-.cmp-navigation__item {}
-.cmp-navigation__item--active {}
-// .cmp-navigation__item--level-0 {}
-.cmp-navigation__item--level-0:hover > .cmp-navigation__group {
-  background: #ECECEC;
+.cmp-navigation {
+    padding: 15px;
+    float: left;
+	position: absolute;    
 }
-.cmp-navigation__item-link {}
+
+.cmp-navigation__group {
+    list-style: none;
+    margin: 0;
+    padding-inline-start: 0;
+}
+
+.cmp-navigation__item {
+    display: block;
+    float: left;
+}
+
+.cmp-navigation__item-link {
+    color: $text-color;
+    font-size: $font-size-small;
+    padding: 15px 17px;
+    text-decoration: none;
+}
+
+/* highlight only level 1 */
+.cmp-navigation__item--active {
+
+    .cmp-navigation__item-link {
+        background-color: none;
+    }
+}
