--- a/ui.frontend/src/main/webpack/site/styles/experiencefragment_footer.scss
+++ b/ui.frontend/src/main/webpack/site/styles/experiencefragment_footer.scss
@@ -1,16 +1,54 @@
-
 //== XF Footer style, used on page template
 
 footer.experiencefragment {
-    padding: .5em 1em;
-    border-top: 1px solid $color-foreground;
+    background-color: $white;
+    color: $text-color;
+    padding: 25px;
+    margin-top: 3rem;
 
-    @media (prefers-color-scheme: dark) {
-        border-color: $color-foreground-dark;
+    .cmp-experiencefragment {
+        max-width: $max-page-width;
+        margin: 0px;
+    }
+
+    p {
+        font-size: $font-size-small;
+    }
+
+    //== Navigation override _navigation.scss
+    .cmp-navigation {
+        float: left;
+    }
+
+    .cmp-navigation__item-link {
+        color: $text-color;
+    
+        &:hover,
+        &:focus {
+            text-decoration: underline;
+            background-color: unset;
+        }
+    }
+    
+    /* Hightlight active navigation item */
+    .cmp-navigation__item--active {
+    
+        .cmp-navigation__item-link {
+            text-decoration: underline;
+            background-color: unset;
+        }
+    }
+
+    //== Separator
+
+    .cmp-separator {
+        margin-top: 2em;
+        margin-bottom: 2em;
     }
 
     .cmp-separator__horizontal-rule {
-        margin: 0;
-        border: 0;
+        border: 1px;
+        color: $brand-secondary
     }
+
 }
