Updates on Recipe Hero Componente ui.frontend

--- a/ui.apps/src/main/content/jcr_root/apps/foodieland/components/category/category.html
+++ b/ui.apps/src/main/content/jcr_root/apps/foodieland/components/category/category.html
@@ -3,9 +3,7 @@
 	data-sly-use.placeholderTemplate="core/wcm/components/commons/v1/templates.html"
 	data-sly-test.hasContent="${!category.empty}">
 	
-	<div class="cmp-category__image">
-		<div class="cmp-category__image-category" data-sly-include="image.html"></div>
-	</div>
+	<div class="cmp-category__image" data-sly-include="image.html"></div>
 	
 	<div class="cmp-category__name">
 		<h4 class="cmp-category__name-category">${category.name}</h4>
