--- a/ui.frontend/src/main/webpack/components/_recipe.scss
+++ b/ui.frontend/src/main/webpack/components/_recipe.scss
@@ -1,11 +1,21 @@
 .cmp-recipe {
 	display: flex;
-	padding: 25px;
+	padding-left: 25px;
+	margin-left: 65px;
+	width: 90%;
+	height: 500px;
+	background: #E7FAFE;
+	border-radius: 30px;
+	align-self: center;
 	
-}
-.cmp-recipe__image {
-	margin-left: 20px;
-	width: 475px;
-	height: 440px;
-	
+	.cmp-recipe__image {
+	    height: 500px;
+	    padding-left: 30px;
+	    width: 625px;
+	    
+	    .cmp-image__image {
+			border-bottom-right-radius: 30px;
+		    border-top-right-radius: 30px;
+		}
+	}
 }
