--- a/ui.frontend/src/main/webpack/components/_simplerecipe.scss
+++ b/ui.frontend/src/main/webpack/components/_simplerecipe.scss
@@ -1,6 +1,8 @@
 .cmp-simplerecipe {
 	margin-left: 50px;
     margin-right: 50px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 	width: 400px;
 	height: 434px;
 	display: block;
