--- a/ui.apps/src/main/content/jcr_root/apps/foodieland/components/recipe/recipe.html
+++ b/ui.apps/src/main/content/jcr_root/apps/foodieland/components/recipe/recipe.html
@@ -1,8 +1,7 @@
 <!--/* recipe.html */-->
 <div class="cmp-recipe"
 	data-sly-use.recipe="com.foodieland.core.models.Recipe"
-	data-sly-use.image="com.adobe.cq.wcm.core.components.models.Image"
-	data-sly-use.placeholderTemplate="core/wcm/components/commons/v1/templates.html">
+	data-sly-use.image="com.adobe.cq.wcm.core.components.models.Image">
 	
 	<div class="cmp-recipe__data">
 		<h4 class="cmp-recipe__type" data-sly-test="${recipe.type}">${recipe.type}</h4>
@@ -12,20 +11,14 @@
 		<h4 class="cmp-recipe__ingredient" data-sly-test="${recipe.ingredient}">${recipe.ingredient}</h4>
 		<h4 class="cmp-recipe__authorName" data-sly-test="${recipe.name}">${recipe.name}</h4>
 		<h4 class="cmp-recipe__date" data-sly-test="${recipe.date}">${recipe.date}</h4>
-		<button data-sly-use.button="com.adobe.cq.wcm.core.components.models.Button"
-	        data-sly-element="${button.buttonLink.valid ? 'a' : 'button'}"
-	        data-sly-attribute="${button.buttonLink.htmlAttributes}"
-	        aria-label="${button.accessibilityLabel}"
-	        data-cmp-clickable="${button.data ? true : false}"
-	        data-cmp-data-layer="${button.data.json}">
+		<button data-sly-use.button="com.adobe.cq.wcm.core.components.models.Button">
 	    	<span class="cmp-button__text">View Recipe</span>
 		</button>
 	</div>
 	
 	<div class="cmp-recipe__image">
 		<a href="${image.link}"> 
-			<img class="cmp-recipe__image--img" src="${image.src}"/>
+			<img class="cmp-recipe__image--img" src="${recipe.imageReference}"/>
 		</a>
 	</div>
-	
 </div>
