Updates on the Header Style

--- a/ui.apps/src/main/content/jcr_root/apps/foodieland/components/simplerecipe/simplerecipe.html
+++ b/ui.apps/src/main/content/jcr_root/apps/foodieland/components/simplerecipe/simplerecipe.html
@@ -18,8 +18,8 @@
 		<div class="cmp-simplerecipe__timeandcategory--time" data-sly-test="${simplerecipe.time}">
 			<p>${simplerecipe.time}</p>
 		</div>
-		<div class="cmp-simplerecipe__timeandcategory--category" data-sly-test="${simplerecipe.selectCategory}">
-			<p>${simplerecipe.selectCategory}</p>
+		<div class="cmp-simplerecipe__timeandcategory--category" data-sly-test="${simplerecipe.category}">
+			<p>${simplerecipe.category}</p>
 		</div>
 	</div>
 </div>
