--- a/ui.frontend/src/main/webpack/components/_navigation.scss
+++ b/ui.frontend/src/main/webpack/components/_navigation.scss
@@ -1,7 +1,7 @@
 .cmp-navigation {
     padding: 15px;
-    float: left;
-	position: absolute;    
+	display: flex;
+    justify-content: center;
 }
 
 .cmp-navigation__group {
