--- a/ui.apps/src/main/content/jcr_root/apps/foodieland/components/instagram/instagram.html
+++ b/ui.apps/src/main/content/jcr_root/apps/foodieland/components/instagram/instagram.html
@@ -1,18 +1,11 @@
 <!--/* instagram.html */-->
 <div
 	class="cmp-instagram"
-	data-sly-use.instagram="com.foodieland.core.models.Instagram"
-	data-sly-use.image="com.adobe.cq.wcm.core.components.models.Image"
-	data-sly-use.button="com.adobe.cq.wcm.core.components.models.Button">
+	data-sly-use.instagram="com.foodieland.core.models.Instagram">
 	
-	<div class="cmp-instagram__image">
-		<a href="${image.link}"> 
-			<img src="${instagram.imagesReference}"/>
+	<div class="cmp-instagram__image" data-sly-test="${instagram.imageReference}">
+		<a data-sly-test="${instagram.link}" href="${instagram.link}"> 
+			<img src="${instagram.imageReference}"/>
 		</a>
 	</div>
-	
-	<div class="cmp-instagram__button" data-sly-include="button.html">
-    	<span class="cmp-instagram__button--title" data-sly-test="${button.title}">${button.title}</span>
-	</div>
-
 </div>
