--- a/ui.frontend/src/main/webpack/components/_fl-title.scss
+++ b/ui.frontend/src/main/webpack/components/_fl-title.scss
@@ -20,7 +20,9 @@
 		height: 60px;
 		background: #000000;
 		border-radius: 16px;
-		text-align: center;
+		display: flex;
+	    justify-content: center;
+	    align-items: center;
 	}
 	
 	.cmp-fltitle__button--title {
