--- a/ui.frontend/src/main/webpack/components/_recipe.scss
+++ b/ui.frontend/src/main/webpack/components/_recipe.scss
@@ -25,8 +25,9 @@
 		height: 60px;
 		background: #000000;
 		border-radius: 16px;
-		text-align: center;
-		vertical-align: middle;
+		display: flex;
+	    justify-content: center;
+	    align-items: center;
 	}
 	
 	.cmp-recipe__button--title {
