--- a/ui.frontend/src/main/webpack/site/styles/experiencefragment_header.scss
+++ b/ui.frontend/src/main/webpack/site/styles/experiencefragment_header.scss
@@ -19,7 +19,11 @@ header.experiencefragment {
 	    float: left;
 	    padding: 15px;
 	    top: 15px;
-	    position: inherit;
+	}
+    
+    .aem-Grid.aem-Grid--default--12>.aem-GridColumn.aem-GridColumn--default--10 {
+    	display: flex;
+    	justify-content: center;
 	}
     
     //== Separator
