Updates on the Category component

--- a/ui.apps/src/main/content/jcr_root/apps/foodieland/components/fl-hero/fl-hero.html
+++ b/ui.apps/src/main/content/jcr_root/apps/foodieland/components/fl-hero/fl-hero.html
@@ -32,8 +32,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="cmp-recipe__button" data-sly-include="button.html" data-sly-test="${button.title}">
-	    	<span class="cmp-recipe__button--title">${button.title}</span>
+		<div class="cmp-recipe__button" data-sly-include="button.html">
+	    	<span class="cmp-recipe__button--title" data-sly-test="${button.title}">${button.title}</span>
 		</div>
 	</div>
 	
