--- a/ui.apps/src/main/content/jcr_root/apps/foodieland/components/fl-course/fl-course.html
+++ b/ui.apps/src/main/content/jcr_root/apps/foodieland/components/fl-course/fl-course.html
@@ -1,27 +1,22 @@
 <!--/* course.html */-->
 <div class="cmp-course"
 	data-sly-use.model="com.foodieland.core.models.Course"
-	data-sly-use.button="com.adobe.cq.wcm.core.components.models.Button"
-	data-sly-test="${model.title}"
-	data-sly-test="${model.description}"
-	data-sly-test="${button.title}"
-	data-sly-test="${model.linkURL}"
-	data-sly-test="${model.imageReference}">
+	data-sly-use.button="com.adobe.cq.wcm.core.components.models.Button">
 	
 	<div class="cmp-course__data-button">
-		<div class="cmp-course__data--title">
+		<div class="cmp-course__data--title" data-sly-test="${model.title}">
 			<h2>${model.title}</h2>
 		</div>
-		<div class="cmp-course__data--description">
+		<div class="cmp-course__data--description" data-sly-test="${model.description}">
 			<p>${model.description}</p>
 		</div>
 		<div class="cmp-course__button" data-sly-include="button.html">
-		    <span class="cmp-course__button--title">${button.title}</span>
+		    <span class="cmp-course__button--title" data-sly-test="${button.title}">${button.title}</span>
 		</div>
 	</div>
 	
-	<div class="cmp-course__image">
-		<a href="${model.linkURL}">
+	<div class="cmp-course__image" data-sly-test="${model.imageReference}">
+		<a data-sly-test="${model.linkURL}" href="${model.linkURL}">
 			<img class="cmp-course__image--img" src="${model.imageReference}"/>
 		</a>
 	</div>
